--- a/src/main/resources/reports/person_report.jrxml
+++ b/src/main/resources/reports/person_report.jrxml
@@ -1,31 +1,28 @@
 <!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
 <jasperReport name="person_report" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20"
               rightMargin="20" topMargin="20" bottomMargin="20" uuid="c50e1be9-d137-4fff-be67-c24bf00fcce1">
-    <dataset name="Dataset1" uuid="5b968668-55a4-460f-9de6-4d1b60b2e089">
-        <query language="sql"><![CDATA[]]></query>
-    </dataset>
-    <parameter name="personId" class="java.util.UUID"/>
-    <parameter name="name" class="java.lang.String"/>
-    <parameter name="birthdate" class="java.time.LocalDate"/>
     <parameter name="qrCodeValue" class="java.lang.String"/>
-    <parameter name="email" class="java.lang.String"/>
-    <parameter name="phoneNumbers" class="java.lang.String"/>
-    <parameter name="gender" class="java.lang.String"/>
-    <parameter name="educationLevel" class="java.lang.String"/>
-    <parameter name="maritalStatus" class="java.lang.String"/>
-    <parameter name="addressStreet" class="java.lang.String"/>
-    <parameter name="addressNumber" class="java.lang.String"/>
-    <parameter name="addressComplement" class="java.lang.String"/>
-    <parameter name="addressNeighborhood" class="java.lang.String"/>
-    <parameter name="addressCity" class="java.lang.String"/>
-    <parameter name="addressState" class="java.lang.String"/>
-    <parameter name="addressZipCode" class="java.lang.String"/>
-    <parameter name="createdAt" class="java.time.Instant"/>
-    <parameter name="updatedAt" class="java.time.Instant"/>
-    <parameter name="listPhoneNumber" class="java.util.List" nestedType="java.lang.Object"/>
+    <parameter name="attendancesByClassroom" class="net.sf.jasperreports.engine.data.JRBeanCollectionDataSource"/>
     <query language="sql"><![CDATA[]]></query>
+    <field name="person.id" class="java.util.UUID"/>
+    <field name="person.name" class="java.lang.String"/>
+    <field name="person.birthdate" class="java.time.LocalDate"/>
+    <field name="person.email" class="java.lang.String"/>
+    <field name="person.formattedPhoneNumbers" class="java.lang.String"/>
+    <field name="person.gender.translate" class="java.lang.String"/>
+    <field name="person.educationLevel.translate" class="java.lang.String"/>
+    <field name="person.maritalStatus.translate" class="java.lang.String"/>
+    <field name="person.createdAt" class="java.time.Instant"/>
+    <field name="person.updatedAt" class="java.time.Instant"/>
+    <field name="person.address.street" class="java.lang.String"/>
+    <field name="person.address.number" class="java.lang.String"/>
+    <field name="person.address.complement" class="java.lang.String"/>
+    <field name="person.address.neighborhood" class="java.lang.String"/>
+    <field name="person.address.zipCode" class="java.lang.String"/>
+    <field name="person.address.city.name" class="java.lang.String"/>
+    <field name="person.address.city.state.abbreviation" class="java.lang.String"/>
     <background splitType="Stretch"/>
-    <title height="113" splitType="Stretch">
+    <title height="234" splitType="Stretch">
         <element kind="component" uuid="47bc8d5b-21b0-4aab-abcd-98d6ae15cc57" x="0" y="0" width="110" height="96">
             <printWhenExpression><![CDATA[true]]></printWhenExpression>
             <component kind="barcode4j:QRCode" evaluationTime="Report">
@@ -34,110 +31,127 @@
         </element>
         <element kind="textField" uuid="747c2d14-3ab4-4493-b2c2-627fb2fec24c" x="109" y="0" width="435" height="30"
                  hTextAlign="Right">
-            <expression><![CDATA["Id: "+$P{personId}]]></expression>
+            <expression><![CDATA["Id: " + $F{person.id}]]></expression>
         </element>
         <element kind="textField" uuid="faee319a-0ac6-4fbf-ba86-e1beb87f2868" x="109" y="10" width="436" height="40"
-                 fontSize="24.0" bold="true" hTextAlign="Left" vTextAlign="Top">
-            <expression><![CDATA[$P{name}]]></expression>
+                 fontSize="28.0" bold="true" hTextAlign="Left" vTextAlign="Bottom">
+            <expression><![CDATA[$F{person.name}]]></expression>
         </element>
-        <element kind="textField" uuid="4caad113-0aad-4fdf-9867-07475ad95500" x="109" y="50" width="111" height="24"
-                 fontSize="12.0">
-            <expression>
-                <![CDATA[$P{birthdate}.format( java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy") )]]></expression>
+        <element kind="textField" uuid="2a9872f2-48e2-4a94-bd49-29067669869d" x="110" y="71" width="434" height="24"
+                 fontSize="12.0" hTextAlign="Right" vTextAlign="Top">
+            <expression><![CDATA[$F{person.formattedPhoneNumbers}]]></expression>
         </element>
-        <element kind="textField" uuid="2a9872f2-48e2-4a94-bd49-29067669869d" x="230" y="50" width="314" height="24"
-                 fontSize="12.0" hTextAlign="Right">
-            <expression><![CDATA[$P{phoneNumbers}]]></expression>
+        <element kind="textField" uuid="e875a284-537c-44cd-84e3-dde155e55781" x="110" y="50" width="435" height="21"
+                 fontSize="12.0" hTextAlign="Right" vTextAlign="Middle">
+            <expression><![CDATA[$F{person.email}]]></expression>
         </element>
-        <element kind="textField" uuid="e875a284-537c-44cd-84e3-dde155e55781" x="110" y="80" width="435" height="24"
-                 fontSize="12.0">
-            <expression><![CDATA[$P{email}]]></expression>
-        </element>
-        <element kind="line" uuid="bded2a73-714e-49bd-890b-824504d594c0" x="0" y="110" width="555" height="1"/>
-    </title>
-    <pageHeader height="108" splitType="Stretch">
-        <element kind="staticText" uuid="3ef75578-1438-4c77-998c-fa68ed8c333f" x="10" y="0" width="60" height="16">
+        <element kind="line" uuid="e02f0b8d-39ed-488b-8281-19dd5c5993cb" x="0" y="95" width="555" height="1"/>
+        <element kind="staticText" uuid="3ef75578-1438-4c77-998c-fa68ed8c333f" x="334" y="105" width="60" height="16">
             <text><![CDATA[Estado civil:]]></text>
         </element>
-        <element kind="textField" uuid="7fb8d092-5bf0-4f27-a647-5faa04771972" x="70" y="0" width="150" height="16"
+        <element kind="textField" uuid="7fb8d092-5bf0-4f27-a647-5faa04771972" x="394" y="105" width="150" height="16"
                  bold="true">
-            <expression><![CDATA[$P{maritalStatus}]]></expression>
+            <expression><![CDATA[$F{person.maritalStatus.translate}]]></expression>
         </element>
-        <element kind="staticText" uuid="0d048f47-55d3-4659-97c2-d7ee5814398d" x="220" y="0" width="40" height="16">
+        <element kind="staticText" uuid="0d048f47-55d3-4659-97c2-d7ee5814398d" x="10" y="105" width="40" height="16">
             <text><![CDATA[Gênero:]]></text>
         </element>
-        <element kind="textField" uuid="2de01226-b0f9-4ca0-ac13-4308871561a3" x="260" y="0" width="80" height="16"
+        <element kind="textField" uuid="2de01226-b0f9-4ca0-ac13-4308871561a3" x="50" y="105" width="70" height="16"
                  bold="true">
-            <expression><![CDATA[$P{gender}]]></expression>
+            <expression><![CDATA[$F{person.gender.translate}]]></expression>
         </element>
-        <element kind="staticText" uuid="e7669036-3041-44bc-a961-a02d0e1273cf" x="340" y="0" width="70" height="16">
+        <element kind="staticText" uuid="e7669036-3041-44bc-a961-a02d0e1273cf" x="120" y="105" width="70" height="16">
             <text><![CDATA[Escolaridade:]]></text>
         </element>
-        <element kind="textField" uuid="f564a5f5-aeb2-41f3-b5b5-1410bf88c1c0" x="410" y="0" width="135" height="16"
+        <element kind="textField" uuid="f564a5f5-aeb2-41f3-b5b5-1410bf88c1c0" x="190" y="105" width="145" height="16"
                  bold="true">
-            <expression><![CDATA[$P{educationLevel}]]></expression>
+            <expression><![CDATA[$F{person.educationLevel.translate}]]></expression>
         </element>
-        <element kind="staticText" uuid="e05299dd-28d7-444c-9363-494642eb5aee" x="10" y="20" width="50" height="16">
+        <element kind="staticText" uuid="e05299dd-28d7-444c-9363-494642eb5aee" x="10" y="145" width="50" height="16">
             <text><![CDATA[Endereço:]]></text>
         </element>
-        <element kind="textField" uuid="51e089fa-f25d-44f0-ad33-4d4373844742" x="60" y="20" width="485" height="16"
+        <element kind="textField" uuid="51e089fa-f25d-44f0-ad33-4d4373844742" x="60" y="145" width="485" height="16"
                  bold="true">
             <expression>
-                <![CDATA[$P{addressStreet} + ", " + $P{addressNumber} + (($P{addressComplement} != null) ? ", " + $P{addressComplement} : "")]]></expression>
+                <![CDATA[$F{person.address.street} + (($F{person.address.number} != null) ? ", " + $F{person.address.number}  : "")+ (($F{person.address.complement} != null) ? ", " + $F{person.address.complement} : "")]]></expression>
         </element>
-        <element kind="staticText" uuid="dab89172-84ef-4a53-b99b-543c62c25ad5" x="10" y="40" width="40" height="16">
+        <element kind="staticText" uuid="dab89172-84ef-4a53-b99b-543c62c25ad5" x="10" y="165" width="40" height="16">
             <text><![CDATA[Bairro:]]></text>
         </element>
-        <element kind="textField" uuid="22345305-2d29-4d61-83ec-3510490df5d5" x="50" y="40" width="140" height="16"
+        <element kind="textField" uuid="22345305-2d29-4d61-83ec-3510490df5d5" x="50" y="165" width="140" height="16"
                  bold="true">
-            <expression><![CDATA[$P{addressNeighborhood}]]></expression>
+            <expression><![CDATA[$F{person.address.neighborhood}]]></expression>
         </element>
-        <element kind="staticText" uuid="2d5b827d-c4e2-4ea8-8202-18e167cc9f2f" x="190" y="40" width="60" height="16">
+        <element kind="staticText" uuid="2d5b827d-c4e2-4ea8-8202-18e167cc9f2f" x="190" y="165" width="60" height="16">
             <text><![CDATA[Cidade/UF:]]></text>
         </element>
-        <element kind="textField" uuid="cecb94e5-8a7a-455e-8a2d-ce22ace67873" x="250" y="40" width="160" height="16"
+        <element kind="textField" uuid="cecb94e5-8a7a-455e-8a2d-ce22ace67873" x="250" y="165" width="160" height="16"
                  bold="true">
-            <expression><![CDATA[$P{addressCity} + " / " + $P{addressState}]]></expression>
+            <expression>
+                <![CDATA[$F{person.address.city.name} + " / " + $F{person.address.city.state.abbreviation}]]></expression>
         </element>
-        <element kind="staticText" uuid="b6c324cd-bf0e-4941-b19f-0ef65287d90f" x="410" y="40" width="30" height="16">
+        <element kind="staticText" uuid="b6c324cd-bf0e-4941-b19f-0ef65287d90f" x="410" y="165" width="30" height="16">
             <text><![CDATA[CEP:]]></text>
         </element>
-        <element kind="textField" uuid="b3e0f6e3-c3c3-4ec1-b121-ed9ebf46e5b2" x="440" y="40" width="105" height="16"
+        <element kind="textField" uuid="b3e0f6e3-c3c3-4ec1-b121-ed9ebf46e5b2" x="440" y="165" width="105" height="16"
                  bold="true">
-            <expression><![CDATA[$P{addressZipCode}]]></expression>
+            <expression><![CDATA[$F{person.address.zipCode}]]></expression>
         </element>
-        <element kind="staticText" uuid="99e584ac-edf1-48e1-aa07-223ca4e166cb" x="10" y="60" width="130" height="16">
+        <element kind="staticText" uuid="99e584ac-edf1-48e1-aa07-223ca4e166cb" x="10" y="185" width="130" height="16">
             <text><![CDATA[Data da criação do cadastro:]]></text>
         </element>
-        <element kind="textField" uuid="5560b1c2-e952-4566-bd42-0ca8a50001e8" x="140" y="60" width="140" height="16"
+        <element kind="textField" uuid="5560b1c2-e952-4566-bd42-0ca8a50001e8" x="140" y="185" width="140" height="16"
                  bold="true">
             <expression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm")
-   .format(java.util.Date.from($P{createdAt}.atZone(java.time.ZoneId.of("America/Sao_Paulo")).toInstant()))]]></expression>
+   .format(java.util.Date.from($F{person.createdAt}.atZone(java.time.ZoneId.of("America/Sao_Paulo")).toInstant()))]]></expression>
         </element>
-        <element kind="staticText" uuid="51e48374-3293-4264-9512-08041b784482" x="10" y="80" width="130" height="16">
+        <element kind="staticText" uuid="51e48374-3293-4264-9512-08041b784482" x="10" y="205" width="130" height="16">
             <text><![CDATA[Última atualização cadastro:]]></text>
         </element>
-        <element kind="textField" uuid="0604f2c4-605b-4270-8329-cfe309890b3d" x="140" y="80" width="140" height="16"
+        <element kind="textField" uuid="0604f2c4-605b-4270-8329-cfe309890b3d" x="140" y="205" width="140" height="16"
                  bold="true">
             <expression><![CDATA[new java.text.SimpleDateFormat("dd/MM/yyyy HH:mm")
-   .format(java.util.Date.from($P{updatedAt}.atZone(java.time.ZoneId.of("America/Sao_Paulo")).toInstant()))]]></expression>
+   .format(java.util.Date.from($F{person.updatedAt}.atZone(java.time.ZoneId.of("America/Sao_Paulo")).toInstant()))]]></expression>
         </element>
-        <element kind="line" uuid="9e4277c9-35ad-435b-9303-9534bc7a166b" x="0" y="100" width="555" height="1"/>
-    </pageHeader>
-    <columnHeader height="230" splitType="Stretch">
-        <element kind="component" uuid="058cc93c-b8e4-47d1-86e1-ca39dc536500" x="170" y="70" width="100" height="30">
-            <component kind="list">
-                <datasetRun uuid="2fe2eee7-f5b7-42fc-a364-09b2cc887599" subDataset="Dataset1">
-                    <dataSourceExpression><![CDATA[$P{listPhoneNumber}]]></dataSourceExpression>
-                </datasetRun>
-                <contents height="30" width="100"/>
-            </component>
+        <element kind="staticText" uuid="f421ac09-45ef-453d-a3d1-1336d5b49d4a" x="10" y="125" width="80" height="16">
+            <text><![CDATA[Data nascimento:]]></text>
         </element>
-    </columnHeader>
+        <element kind="textField" uuid="4ae2075e-58f7-42fe-ae4f-e5667e33cd55" x="90" y="125" width="130" height="16"
+                 bold="true">
+            <expression>
+                <![CDATA[$F{person.birthdate}.format( java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy") )]]></expression>
+        </element>
+        <element kind="textField" uuid="a7802e05-64bf-4220-b6ce-48a189e739fe" x="260" y="125" width="284" height="16"
+                 bold="true">
+            <expression><![CDATA[$F{person.email}]]></expression>
+        </element>
+        <element kind="staticText" uuid="3bbe391e-e7ad-4c5d-b2b6-2f24f8e1a66d" x="220" y="125" width="40" height="16">
+            <text><![CDATA[E-maill:]]></text>
+        </element>
+        <element kind="line" uuid="9e4277c9-35ad-435b-9303-9534bc7a166b" x="0" y="233" width="555" height="1"/>
+    </title>
+    <pageHeader height="139" splitType="Stretch"/>
+    <columnHeader height="30" splitType="Stretch"/>
     <detail>
-        <band height="125" splitType="Stretch"/>
+        <band height="302" splitType="Stretch">
+            <property name="com.jaspersoft.studio.layout"
+                      value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+        </band>
     </detail>
     <columnFooter height="45" splitType="Stretch"/>
-    <pageFooter height="54" splitType="Stretch"/>
-    <summary height="42" splitType="Stretch"/>
+    <pageFooter height="31" splitType="Stretch">
+        <element kind="textField" uuid="1cafc219-2182-48d0-9993-769937b0884b" x="455" y="0" width="100" height="30"
+                 hTextAlign="Right">
+            <expression><![CDATA["Page " + $V{PAGE_NUMBER} + " of " + $V{PAGE_NUMBER}]]></expression>
+        </element>
+        <element kind="line" uuid="414c12e8-b47e-4442-892a-586371a3de3d" x="0" y="0" width="555" height="1"/>
+        <element kind="textField" uuid="a5b05bf0-3b7b-4a51-9777-97e95a0d86b8" x="0" y="1" width="100" height="30"
+                 pattern="MMMMM dd, yyyy">
+            <expression><![CDATA[new java.util.Date()]]></expression>
+        </element>
+        <element kind="textField" uuid="cf754a04-b1a2-4ec9-b264-6f865859a8fa" x="100" y="0" width="100" height="30"
+                 pattern="HH:mm">
+            <expression><![CDATA[new java.util.Date()]]></expression>
+        </element>
+    </pageFooter>
 </jasperReport>
